The standard format is now JSON rather than YAML.

--- a/pkg/pkg-register.8
+++ b/pkg/pkg-register.8
@@ -15,7 +15,7 @@
 .\"     @(#)pkg.8
 .\" $FreeBSD$
 .\"
-.Dd April 14, 2013
+.Dd January 11, 2014
 .Dt PKG-REGISTER 8
 .Os
 .Sh NAME
@@ -54,7 +54,7 @@ Direct analysis of files installed by the package
 .El
 .Pp
 The package manifest is a
-.Cm YAML
+.Cm JSON
 format listing of package meta-data.
 It can contain all of the necessary meta-data needed by the package,
 but the more usual approach is to provide selected items via the
